# exaspim-control

./: README.md  pyproject.toml  ruff.toml
exaspim_control/: exa_spim_acquisition.py  exa_spim_acquisition_zarr.py  exa_spim_instrument.py  exa_spim_view.py  metadata_launch.py  simulated_instrument.yaml
exaspim_control/experimental/: acquisition.yaml  exa_spim_view.py  gui_config.yaml  instrument.yaml  main.py
exaspim_control/metadata/: aind_metadata_class.py
exaspim_control/simulated/: acquisition.yaml  gui_config.yaml  instrument.yaml  simulated_main.py
exaspim_control/test/: acquisition.py  acquisition.yaml  exa_spim_view.py  instrument.yaml  simulated_acquisition.yaml  simulated_instrument.yaml  simulated_test.py  test_acquisition.py
exaspim_control/test/camera_only/: acquisition.py  acquisition.yaml  acquisition2.yaml  instrument.yaml  instrument2.yaml  test_acquisition.py
exaspim_control/test/simulated/: acquisition.yaml  instrument.yaml  test_acquisition.py
instruments/beta1/: exaspim.yaml  gui_config.yaml  instrument.yaml
instruments/beta1/classic/: instrument.yaml
instruments/beta3/: acquisition.yaml  exaspim.yaml  instrument.yaml  live.py
instruments/beta3/classic/: gui_config.yaml  instrument.yaml
instruments/simulated/: exaspim.yaml
scripts/: app.py  axis_limits.py  bleaching_analysis.py  cli.py  instrument_ui.py  live.py
src/exaspim_control/: __init__.py  acq_task.py  acquisition.py  acquisition_headless.py  app.py  build.py  cli.py  config.py  exa_spim_acquisition.py  exa_spim_acquisition_headless.py  exa_spim_instrument.py  exa_spim_view.py  gui.py  instrument.py  metadata_launch.py  plan.py  session.py  view.py
src/exaspim_control/_qtgui/: __init__.py  app.py  launcher.py  main.py  model.py  utils.py
src/exaspim_control/_qtgui/assets/: __init__.py
src/exaspim_control/_qtgui/pages/: __init__.py  launch_page.py  loading_page.py  main_page.py  napari_window.py
src/exaspim_control/_qtgui/primitives/: __init__.py  accordion.py  card.py  chip.py  colors.py  layout.py
src/exaspim_control/_qtgui/primitives/buttons/: __init__.py  button.py
src/exaspim_control/_qtgui/primitives/containers/: __init__.py  accordion.py  card.py  tab_widget.py
src/exaspim_control/_qtgui/widgets/: acq_task_panel.py  device_explorer.py  frame_task_panel.py  live_viewer.py  log_viewer.py  metadata_editor.py  primary_controls.py  session_planner.py  volume_graphic.py
src/exaspim_control/acquisition/: __init__.py  core.py  headless.py  view.py
src/exaspim_control/camera_only/: acquisition.yaml  gui_config.yaml  instrument.yaml
src/exaspim_control/experimental/: acquisition.yaml  gui_config.yaml  instrument.yaml  main.py
src/exaspim_control/instrument/: acq_task.py  config.py  frame_task.py  instrument.py
src/exaspim_control/metadata/: aind_metadata_class.py
src/exaspim_control/qtgui/: __init__.py  acq_task_widget.py  control_tab.py  devices_tab.py  experiment_tab.py  launcher.py  live.py  main.py  model.py
src/exaspim_control/qtgui/components/: __init__.py  accordion.py  card.py  chip.py  toggle_button.py  wheel.py
src/exaspim_control/qtgui/devices/: axis_widget.py  camera_widget.py  device_adapter.py  device_widget.py  filter_wheel_widget.py  laser_widget.py  property_widget.py
src/exaspim_control/qtgui/misc/: gl_ortho_view_widget.py  gl_path_item.py  gl_shaded_box_item.py  q_item_delegates.py  q_scrollable_float_slider.py  q_start_stop_table_header.py
src/exaspim_control/qtgui/primitives/: __init__.py  button.py  layout.py
src/exaspim_control/qtgui/volume/: __init__.py  grid_controls_widget.py  tile_table.py  volume_graphic.py  volume_model.py
src/exaspim_control/qtgui/widgets/: acq_task_panel.py  device_explorer.py  live_viewer.py  metadata_editor.py  primary_controls.py  session_planner.py  volume_graphic.py
src/exaspim_control/qtgui/widgets/devices/: axis.py  (+4 more)
src/exaspim_control/routines/: background_collection.py
src/exaspim_control/session/: __init__.py  session.py  state.py
src/exaspim_control/simulated/: acquisition.yaml  gui_config.yaml  instrument.yaml  main.py  simulated_main.py
src/exaspim_control/test/: exa_spim_view.py
src/exaspim_control/test/camera_only/: acquisition.py  acquisition2.yaml  instrument.yaml  instrument2.yaml  test_acquisition.py
src/exaspim_control/test/simulated/: test_acquisition.py
src/exaspim_control/widgets/: camera_widget.py  filter_wheel_widget.py  flip_mount_widget.py  laser_widget.py  ni_widget.py  stage_widget.py  tunable_lens_widget.py
tests/: test_metadata_launch.py
view/: README.md  pyproject.toml
view/src/view/: __init__.py  acquisition_view.py  instrument_view.py  metadata_launch.py
view/src/view/ui/: __init__.py  card.py  toggle_button.py
view/src/view/widgets/: base_device_widget.py  device_widget.py  property_widget.py
view/src/view/widgets/acquisition_widgets/: channel_plan_widget.py  metadata_widget.py  volume_model.py
view/src/view/widgets/device_widgets/: camera_widget.py  filter_wheel_widget.py  joystick_widget.py  laser_widget.py  ni_widget.py  stage_widget.py  tunable_lens_widget.py  waveform_widget.py
view/src/view/widgets/miscellaneous_widgets/: gl_ortho_view_widget.py  q_item_delegates.py  q_scrollable_line_edit.py  q_start_stop_table_header.py
view/tests/: test_metadata_launch.py
voxel/: README.md  pyproject.toml
voxel/src/voxel/: TRANSITION.md  __init__.py  acquisition.py  instrument.py  preview.py
voxel/src/voxel/.archive/: acquisition.py  instrument.py
voxel/src/voxel/acquisition/: acquisition.py
voxel/src/voxel/descriptors/: deliminated_property.py
voxel/src/voxel/device/: __init__.py  base.py  build.py  build2.py
voxel/src/voxel/devices/: base.py
voxel/src/voxel/file_transfers/: base.py  robocopy.py  robocopy_zarr.py  rsync.py
voxel/src/voxel/instruments/: instrument.py
voxel/src/voxel/interfaces/: spim.py
voxel/src/voxel/metadata/: metadata_class.py
voxel/src/voxel/new/: TRANSITION.md  preview.py  utils.py
voxel/src/voxel/processes/: histogram.py
voxel/src/voxel/writers/: base.py  bdv.py  imaris.py  tiff.py  zarr.py
(+275 files in other folders)
