[project]
name = "exaspim-control"
description = "Control software for the ExaSPIM microscope"
requires-python = ">=3.10, <3.12"
authors = [
    { name = "Micah Woodard", email = "micah.woodard@alleninstitute.org" },
    { name = "Adam Glaser", email = "adam.glaser@alleninstitute.org" },
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "ExA-SPIM",
    "SPIM",
    "microscopy",
    "light-sheet",
    "lightsheet",
    "microscope",
    "imaging",
]
version = "0.1.0"

dependencies = [
    "voxel[all]",
    "aind_data_schema >= 0.26.7",
    "view @ git+https://github.com/AllenNeuralDynamics/view.git",
    "rich>=14.2.0",
    "pyqt6>=6.10.0",
]

[project.optional-dependencies]
"dev" = ["black", "isort", "flake8"]


[tool.uv.sources]
"voxel" = { workspace = true }

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/exaspim-control"

[project.scripts]
"exaspim" = "exaspim_control.app:cli"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.pytest_cache
      | \.tox
      | \.venv
      | __pycache__
      | _build
      | build
      | dist
    )/
    | .gitignore
    | \.pyi?$
    | \.yaml$
)'''

[tool.isort]
line_length = 120
profile = "black"

[tool.uv.workspace]
members = ["voxel"]
