[project]
name = "exaspim-control"
description = "Control software for the ExaSPIM microscope"
requires-python = ">=3.12, <3.13"
authors = [
    { name = "Micah Woodard", email = "micah.woodard@alleninstitute.org" },
    { name = "Adam Glaser", email = "adam.glaser@alleninstitute.org" },
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "ExA-SPIM",
    "SPIM",
    "microscopy",
    "light-sheet",
    "lightsheet",
    "microscope",
    "imaging",
]
version = "0.1.0"

dependencies = [
    "aind_data_schema >= 0.26.7",
    "rich>=14.2.0",
    "voxel[all]",
    "view",
    "ruyaml>=0.91.0",
]

[dependency-groups]
dev = ["pytest>=8.2.1", "ruff", "coverage", "interrogate", "Sphinx", "furo"]


[tool.uv.sources]
"voxel" = { workspace = true }
"view" = { workspace = true }

[project.scripts]
"exaspim" = "exaspim_control.cli:main"

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/exaspim-control"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["voxel", "view"]

[tool.coverage.run]
omit = ["*__init__*"]
source = ["voxel", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail_under = 100
