[project]
name = "exaspim-control"
description = "Control software for the ExaSPIM microscope"
requires-python = ">=3.13, <3.14"
authors = [
    { name = "Micah Woodard", email = "micah.woodard@alleninstitute.org" },
    { name = "Adam Glaser", email = "adam.glaser@alleninstitute.org" },
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "ExA-SPIM",
    "SPIM",
    "microscopy",
    "light-sheet",
    "lightsheet",
    "microscope",
    "imaging",
]
version = "0.1.0"

dependencies = [
    "aind_data_schema >= 0.26.7",
    "rich>=14.2.0",
    "voxel[all]",
    "ruyaml>=0.91.0",
    "pydantic>=2.11.10",
    # processing
    "opencv-python-headless>=4.11.0.86",
    "gputools",
    # gui
    "pyqt6>=6.10.1",
    "pyqtgraph>=0.14.0",
    "napari>=0.6.6",
]

[dependency-groups]
dev = ["pytest>=8.2.1", "coverage", "ruff"]


[tool.uv.sources]
"voxel" = { workspace = true }
"gputools" = { path = "./vendor/gputools-src", editable = true }

[project.scripts]
"exaspim" = "exaspim_control.app:main"

[project.urls]
"Homepage" = "https://github.com/AllenNeuralDynamics/exaspim-control"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["voxel"]

[tool.pyright]
typeCheckingMode = "standard"
ignore = ["**/sdks/**", "**/sdk/**", "vendor/**", "voxel/**/io/**"]

[tool.coverage.run]
omit = ["*__init__*"]
source = ["voxel", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail_under = 100
